--- a/src/track_demo/package.xml
+++ b/src/track_demo/package.xml
@@ -56,6 +56,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>cv_brige</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -65,6 +66,7 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>cv_brige</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>image_transport</exec_depend>
